Add new 'galleries count as one' batch download setting

--- a/gui/src/tabs/downloads-tab.ui
+++ b/gui/src/tabs/downloads-tab.ui
@@ -103,6 +103,11 @@
      </column>
      <column>
       <property name="text">
+       <string>Galleries count as one</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
        <string>Progress</string>
       </property>
      </column>
