--- a/gui/src/tabs/favorites-tab.ui
+++ b/gui/src/tabs/favorites-tab.ui
@@ -454,7 +454,7 @@ QWidget#scrollAreaWidgetContents {
           <property name="styleSheet">
            <string notr="true">background-color:transparent;</string>
           </property>
-          <layout class="QGridLayout" name="layoutResults">
+          <layout class="QGridLayout" name="layoutResultsScroll">
            <property name="leftMargin">
             <number>0</number>
            </property>
@@ -467,6 +467,22 @@ QWidget#scrollAreaWidgetContents {
            <property name="bottomMargin">
             <number>0</number>
            </property>
+           <item row="0" column="0">
+            <layout class="QGridLayout" name="layoutResults"/>
+           </item>
+           <item row="1" column="0">
+            <spacer name="verticalSpacer">
+             <property name="orientation">
+              <enum>Qt::Vertical</enum>
+             </property>
+             <property name="sizeHint" stdset="0">
+              <size>
+               <width>0</width>
+               <height>0</height>
+              </size>
+             </property>
+            </spacer>
+           </item>
           </layout>
          </widget>
         </widget>
