--- a/gui/src/settings/options-window.ui
+++ b/gui/src/settings/options-window.ui
@@ -358,6 +358,13 @@
         <item row="10" column="1">
          <widget class="QLineEdit" name="lineGlobalPostFilter"/>
         </item>
+        <item row="13" column="0" colspan="2">
+         <widget class="QCheckBox" name="checkSendUsageData">
+          <property name="text">
+           <string>Send anonymous usage data</string>
+          </property>
+         </widget>
+        </item>
        </layout>
        <zorder>label</zorder>
        <zorder>comboLanguages</zorder>
@@ -380,6 +387,7 @@
        <zorder>comboCheckForUpdates</zorder>
        <zorder>labelGlobalPostFilter</zorder>
        <zorder>lineGlobalPostFilter</zorder>
+       <zorder>checkSendUsageData</zorder>
       </widget>
       <widget class="QWidget" name="pageSources">
        <layout class="QFormLayout" name="formLayout_2">
@@ -987,8 +995,8 @@
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>369</width>
-             <height>377</height>
+             <width>65</width>
+             <height>16</height>
             </rect>
            </property>
            <layout class="QVBoxLayout" name="scrollAreaWidgetLayout">
